--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: mmmfang
   instagram:
-  linkedin: https://www.linkedin.com/in/maefang
+  linkedin: maefang
   pinterest:
   rss: hey
   twitter: 
