--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mae Fang - Blog
 description: Web Developer from NYC
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/mf_avatar.jpeg
 
 #
 # Flags below are optional
