--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ baseurl: "/blog"
 #
 
 markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
